--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "yup": "^0.29.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "pre-deploy": "npm run build",
@@ -37,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "yup": "^0.29.1"
   }
 }
